--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyCl_isiINUM7Pn_OL7g_ddsrAbF0WrIGf4"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
