--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-maps": "^1.18.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0"
