--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-date-picker": "^5.0.7",
     "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^4.11.0",
